@@ -1,4 +1,8 @@
-2004-11-01 Scott Dattalo <scott@dattalo.com>
+2004-11-02 Scott Dattalo <scott@dattalo.com>
+	* src/attribute.cc, src/attribute.h, src/modules.cc, src/modules.h:
+	cleaned up include dependencies.
+
+2004-11-02 Scott Dattalo <scott@dattalo.com>
 	* src/gpsim_time.cc, src/gpsim_time.h: Fixed a bug with clearing
 	cycle counter break points.
 	
